2 March 2022: George
	- Merge PR #632 from scottrw93: Match cnames in ipset.
	- Various fixes for #632: variable initialisation, convert the qinfo
	  to str once, accept trailing dot in the local-zone ipset option.

2 March 2022: Wouter
	- Fix compile warnings for printf ll format on mingw compile.

1 March 2022: Wouter
	- Fix pythonmod for change in iter_dp_is_useless function prototype.

28 February 2022: George
	- Fix #630: Unify the RPZ log messages.
	- Merge #623 from rex4539: Fix typos.

28 February 2022: Wouter
	- Fix #633: Document unix domain socket support for unbound-control.
	- Fix for #633: updated fix with new text.
	- Fix edns client subnet to add the option based on the option list,
	  so that it is not state dependent, after the state fix of #605 for
	  double EDNS options.
	- Fix for edns client subnet option add fix in removal code, from review.

25 February 2022: Wouter
	- Fix to detect that no IPv6 support means that IPv6 addresses are
	  useless for delegation point lookups.
	- update Makefile dependencies.
	- Fix check interface existence for support detection in remote lookup.

18 February 2022: Wouter
	- Fix that address not available is squelched from the logs for
	  udp connect failures. It is visible on verbosity 4 and more.
	- Merge #631 from mollyim: Replace OpenSSL's ERR_PACK with
	  ERR_GET_REASON.

16 February 2022: Wouter
	- Fix for #628: fix rpz-passthru for qname trigger by localzone type.

15 February 2022: Wouter
	- Fix #628: A rpz-passthru action is not ending RPZ zone processing.

11 February 2022: Wouter
	- Fix #624: Unable to stop Unbound in Windows console (does not
	  respond to CTRL+C command).
	- Fix #618: enabling interface-automatic disables DNS-over-TLS.
	  Adds the option to list interface-automatic-ports.
	- Remove debug info from #618 fix.

7 February 2022: Wouter
	- Fix that TCP interface does not use TLS when TLS is also configured.

4 February 2022: Wouter
	- Fix #412: cache invalidation issue with CNAME+A.
